# concoord configuration file

[metadata]
name = concoord
version = 0.1.0
author = Deniz Altinbuken, Emin Gun Sirer
author-email = deniz@systems.cs.cornell.edu, egs@systems.cs.cornell.edu
maintainer = Deniz Altinbuken
maintainer-email = deniz@systems.cs.cornell.edu
summary = Concoord coordination service for distributed systems
description-file = README
keywords = concoord, openreplica, coordination, replication, synchronization

requires-python = >=2.6
requires-dist = pkginfo
requires-external = python-dnspython
provides-dist = concoord (0.1.0)

project-url = http://openreplica.org/src

[global]
# Auto-detect modules, packages, scripts, files
autodetect = 1
