# concoord configuration file

[metadata]
name = concoord
version = 0.3.0
author = Deniz Altinbuken, Emin Gun Sirer
author-email = deniz@systems.cs.cornell.edu, egs@systems.cs.cornell.edu
maintainer = Deniz Altinbuken
maintainer-email = concoord@systems.cs.cornell.edu
summary = Coordination service for distributed systems.
description-file = README
keywords = concoord, openreplica, coordination, replication, synchronization

requires-python = >=2.6
requires-dist = pkginfo
requires-external = python-dnspython
provides-dist = concoord (0.2.0)

project-url = concoord, http://openreplica.org/
home-page = http://openreplica.org/
download-url = http://openreplica.org/src/

[global]
# Auto-detect modules, packages, scripts, files
autodetect = 1
